<resources>
    <string name="app_name">DCalendar</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="event_name">Event name</string>
    <string name="start_date">Start date:</string>
    <string name="start_time">Start time:</string>
    <string name="end_date">End date:</string>
    <string name="end_time">End time:</string>
    <string name="location">Location:</string>
    <string name="reminder">Remind\nbefore:</string>
    <string-array name="reminder_time">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1h</item>
        <item>2h</item>
        <item>4h</item>
        <item>1 day</item>
        <item>2 day</item>
        <item>1 week</item>
    </string-array>
    <string name="description">Description</string>
    <string name="short_description">Short description</string>
    <string name="title_activity_devent_adding">DEventAdding</string>
    <string name="add">Add</string>
    <string name="country_city_address_etc">Country/City/Address</string>
    <string-array name="day_names">
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>
    <string name="simple_time">10:00</string>
    <string-array name="repetition_values">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="repeat">Repeat:</string>
    <string name="no_events">No Events Found</string>
</resources>
