<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dview.DEvent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/start_time_devent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/devent_time_text_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/simple_time"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/time_icon_devent"
                android:layout_height="@dimen/time_icon_devent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/proba" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/end_time_devent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:text="@string/simple_time"
                android:textSize="@dimen/devent_time_text_size"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/details_icon_devent"
                android:layout_height="@dimen/details_icon_devent"
                android:layout_gravity="center"
                android:src="@drawable/proba" />
            <TextView
                android:id="@+id/name_devent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textSize="@dimen/devent_details_text_size"
                android:text="@string/event_name"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/details_icon_devent"
                android:layout_height="@dimen/details_icon_devent"
                android:src="@drawable/proba" />
            <TextView
                android:id="@+id/location_devent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textSize="@dimen/devent_details_text_size"
                android:text="@string/location"/>

        </LinearLayout>
        <TextView
            android:id="@+id/description_devent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/devent_time_text_size"
            android:text="@string/really_long_text"/>
    </LinearLayout>

</LinearLayout>